public class Agency {

    int bureauLevel;


    public int getBureauLevel() {
        return bureauLevel;
    }
    public void addClientToAgency(Clients c) {
        //adds the prospective client to Agency

        //agency.add(client);



    }


    }

