public class ClubNegotiation {

    public void negotiationRounds() {
        //Club sends out initial offer
        //Agent accepts or declines
        //improved offer

    }
}
