public interface Negotiation {

    public void runNegotiation();

    public void acceptOffer();
    public void declineOffer();

}
